--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Mario",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.0",
+    "cors": "^2.8.5",
     "express": "^4.17.3",
     "mongoose": "^6.2.10"
   },
