--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Mario",
+  "author": "Oscar",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.0",
+    
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "mongoose": "^6.2.10"
